feat: count Search API
